@@ -120,6 +120,13 @@ void CUS::calculate ()
         }
       }
    
+      if (! inList.count())
+      {
+        qDebug("CUS::calculate: no input array");
+        config.closePlugin(plugin);
+        return;
+      }
+
       PlotLine *out = plug->calculateCustom(parms, inList);
       if (! out)
       {
